--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
   },
   "dependencies": {
     "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react-circular-progressbar": "^1.0.0",
+    "react-dom": "^16.8.6",
+    "request": "^2.88.0"
   }
 }
